pod-security-vpol/baseline/restrict-apparmor-profiles/.kyverno-test/resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  securityContext:
    appArmorProfile:
      type: Unconfined
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: Unconfined
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  securityContext:
    appArmorProfile:
      type: RuntimeDefault
  initContainers:
  - name: initcontainer01
    image: dummyimagename
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: unconfined
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: runtime/default
    container.apparmor.security.beta.kubernetes.io/initcontainer01: unconfined
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod08
spec:
  containers:
  - name: container01
    image: dummyimagename
  ephemeralContainers:
  - name: ephcontainer01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod09
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: foo/bar
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod10
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: localhost
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod11
spec:
  securityContext:
    appArmorProfile: {}
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod12
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: ""
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod13
spec:
  securityContext:
    appArmorProfile:
      type: Unconfined
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: RuntimeDefault
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  securityContext:
    appArmorProfile:
      type: RuntimeDefault
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  securityContext:
    appArmorProfile:
      type: Localhost
      localhostProfile: my-profile
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: RuntimeDefault
  - name: container02
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: Localhost
        localhostProfile: my-profile
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: Localhost
        localhostProfile: my-profile
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: runtime/default
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: localhost/my-profile
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: Localhost
        localhostProfile: my-profile
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
  annotations:
    container.apparmor.security.beta.kubernetes.io/initcontainer01: localhost/my-profile
    foo.example.com/apparmor: unconfined
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: ""
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
spec:
  containers:
  - name: container01
    image: dummyimagename
  ephemeralContainers:
  - name: ephcontainer01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: RuntimeDefault
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        appArmorProfile:
          type: Unconfined
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
      - name: container02
        image: dummyimagename
        securityContext:
          appArmorProfile:
            type: Unconfined
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: dummyimagename
        securityContext:
          appArmorProfile:
            type: Unconfined
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        container.apparmor.security.beta.kubernetes.io/container01: unconfined
    spec:
      containers:
      - name: container01
        image: dummyimagename
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        appArmorProfile:
          type: RuntimeDefault
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
        securityContext:
          appArmorProfile:
            type: RuntimeDefault
      - name: container02
        image: dummyimagename
        securityContext:
          appArmorProfile:
            type: Localhost
            localhostProfile: my-profile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        container.apparmor.security.beta.kubernetes.io/container01: runtime/default
    spec:
      containers:
      - name: container01
        image: dummyimagename
---
###### CronJobs - Bad
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          securityContext:
            appArmorProfile:
              type: Unconfined
          containers:
          - name: container01
            image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
          - name: container02
            image: dummyimagename
            securityContext:
              appArmorProfile:
                type: Unconfined
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: dummyimagename
            securityContext:
              appArmorProfile:
                type: Unconfined
          containers:
          - name: container01
            image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            container.apparmor.security.beta.kubernetes.io/container01: unconfined
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
---
###### CronJobs - Good
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          securityContext:
            appArmorProfile:
              type: RuntimeDefault
          containers:
          - name: container01
            image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
            securityContext:
              appArmorProfile:
                type: RuntimeDefault
          - name: container02
            image: dummyimagename
            securityContext:
              appArmorProfile:
                type: Localhost
                localhostProfile: my-profile
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            container.apparmor.security.beta.kubernetes.io/container01: runtime/default
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
